Improved Resolver, Executors and added Articles elements